# icfpc2023

./: .dir-locals.el  README.md  dune-project  fetch  flake.nix  run  submit
lib/: dune
solutions/: .gitignore
test/: dune
