(lang dune 3.9)

(name icfpc2023)

(source
 (github username/reponame))

(authors "Steve Purcell")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name icfpc2023)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
